# cut

./: CMakeLists  CMakeLists.txt  analyzer  analyzer.c  analyzer.h  cpu.h  info.txt  main  main.c  printer  printer.c  printer.h  reader  reader.c  reader.h
inc/: analyzer.h  buffer.h  cpu.h  printer.h  reader.h
src/: analyzer.c  buffer.c  printer.c  reader.c
